--- a/style.css
+++ b/style.css
@@ -1,96 +1,87 @@
-
- .calc{
-    margin: 50px auto;
-    width: 420px;
-    height: 385px;
-    background: #fff;
-    color: #333;
-    font-family: Arial;
-    padding: 18px;
-    border: #000 1px solid;
-  }
-  .calc_screen{
-    height: 60px;
-    width: 370px;
-    display: grid;
-    justify-items:end;
-    align-items: center;
-    margin: 25px 25px 15px 25px;
-    border: #333 1px solid;
-    background: #F1F1F1;
-
-  }
-  .calc_result{
-    /* text-align: right; */
-    font-size: 28px;
-    margin: auto 15px;
-  }
-  .calc_input{
-    background: #F1F1F1;
-    margin: auto 15px;
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 28px;
-line-height: 33px;
-  }
-.buttons{
-   display: grid;
-   width: 370px;
-   grid-template-columns: repeat(7, minmax(40px, 1fr) );
-   grid-template-rows: repeat(5, 1fr);
-   /* grid-template-areas:
-  "mc . . c ac mintir Rvt"
-  "ms . seven eight nine division scobkaA"
-  "mr . four five six myltiply scobkaB"
-  "Mplus . one two three minus equal"
-  "Mminus . zero dot plus-minus plus equal";  */
-   grid-gap: 15px; 
-   margin: 0 25px 25px 25px ;
+@font-face {
+  font-family: 'Roboto';
+  src: url(Fonts/Roboto/Roboto-Regular.ttf);
+  font-style: normal;
+  font-weight: 400;
 }
-.clear {
-  grid-column: 4/4;
+:root {
+  --color-black: #000;
+  --color-white: #fff;
+  --gray-1: #F1F1F1;
+  --gray-2: #E5E5E5;
+  --gray-3: #333;
 }
-.seven{
-  grid-column: 3/3;
-
-}
-.special-item {
-  /* grid-column-start: 7;
-  grid-column-end: 7; */
-  /* grid-row-start: 4;
-  grid-row-end: 5; */
-  grid-column: 7;
-  grid-row: 4/5;
-}
-
-.btn{
+.calc__btn{
   width: 40px;
   height: 40px;
-  background: #F1F1F1;
-  border: 1px solid #000000;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  background: var(--gray-1);
+  border: 1px solid var(--color-black);
+  box-shadow: 2px 2px 2px rgba(var(--color-black), 0.25);
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   user-select: none;
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 16px;
+  font-size: 14px;
+  line-height: 16px;
 }
-.btn:active{
+.calc__btn:active{
   filter: brightness(90%);
 }
-.Rvt{
+.calc{
+  width: 420px;
+  height: 385px;
+  background: var(--color-white);
+  font-family: 'Roboto', sans-serif;
+  padding: 18px;
+  margin: 50px auto;
+  border: var(--color-black) 1px solid;
+}
+.calc__screen{
+  height: 60px;
+  width: 370px;
+  display: grid;
+  justify-items:end;
+  align-items: center;
+  margin: 25px 25px 15px 25px;
+  border: var(--gray-3) 1px solid;
+  background: var(--gray-2);
+}
+.calc__input{
+  height: auto;
+  background: var(--gray-2);
+  margin: auto 15px;
+  font-size: 28px;
+  line-height: 33px;
+}
+.calc__wrapper{
+  display: grid;
+  width: 370px;
+  grid-template-columns: repeat(7, minmax(40px, 1fr) );
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 15px; 
+  margin: 0 25px 25px 25px ;
+}
+.calc__btn__clear {
+  grid-column: 4/4;
+}
+.calc__btn__position{
+  grid-column: 3/3;
+}
+.equal-position {
+  grid-column: 7;
+  grid-row: 4/6;
+  height: auto;
+}
+.js-rvt-button{
   border: none;
   box-shadow: none;
+  background: var(--gray-2);
 }
 .Rvt_action{
-  border: 1px solid #000000;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  border: 1px solid var(--color-black);
+  box-shadow: 2px 2px 2px rgba(var(--color-black), 0.25);
+  background: var(--gray-1);
 }
 
 
